--- a/tests/content/test-bot.html
+++ b/tests/content/test-bot.html
@@ -55,11 +55,11 @@ var testList = [
     {group: "firebug",            uri: "firebug/openOpenCloseClose.js",           desc: "Opening and Closing Pages and Firebug." },
     {group: "firebug",            uri: "firebug/selectedPanelAfterReopen.js",     desc: "Selected panel should be still selected if Firebug UI is reopened.", testPage: "firebug/OpenFirebugOnThisPage.html"},
     {group: "firebug",            uri: "firebug/viralActivation.js",              desc: "Links from active pages should be active", testPage: "firebug/OpenFirebugOnThisPage.html" },
-    {group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
+    //{group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
     {group: "firebug",            uri: "firebug/4040/issue4040.js",               desc: "Switching to a about:blank page does not update the panels", testPage: "firebug/4040/issue4040.html" },
     {group: "firebug",            uri: "firebug/4153/issue4153.js",               desc: "Re-attaching detached, deactivated Firebug UI doesn't close it", testPage: "firebug/4153/issue4153.html" },
     {group: "firebug",            uri: "firebug/4553/issue4553.js",               desc: "iframe should be content-primary", testPage: "firebug/4553/issue4553.html" },
-    {group: "firebug",            uri: "firebug/5349/issue5349.js",               desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
+    //{group: "firebug",            uri: "firebug/5349/issue5349.js",               desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
     {group: "firebug",            uri: "firebug/5526/issue5526.js",               desc: "Open Firebug in detached mode when it was minimized in detached mode", testPage: "firebug/5526/issue5526.html" },
     {group: "firebug/options",    uri: "firebug/options/textSize.js",             desc: "Changing Firebug text size.", testPage: "firebug/options/textSize.html" },
     {group: "search",             uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
@@ -113,7 +113,7 @@ var testList = [
     {group: "console",            uri: "console/5026/issue5026.js",               desc: "RegExp source isn't shown", testPage: "console/5026/issue5026.html"},
     {group: "console",            uri: "console/5033/issue5033.js",               desc: "Return value from a function executed on the command line is not displayed.", testPage: "console/5033/issue5033.html"},
     {group: "console",            uri: "console/5359/issue5359.js",               desc: "Use displayName in profiler", testPage: "console/5359/issue5359.html"},
-    {group: "console",            uri: "console/5382/issue5382.js",               desc: "Console.log display bug with nested arrays", testPage: "console/5382/issue5382.html"},
+    //{group: "console",            uri: "console/5382/issue5382.js",               desc: "Console.log display bug with nested arrays", testPage: "console/5382/issue5382.html"},
     {group: "console",            uri: "console/3663/issue3663.js",               desc: "too much recursion when logging array contains itself", testPage: "console/3663/issue3663.html"},
     {group: "console",            uri: "console/5135/issue5135.js",               desc: "Display window.postMessage() calls in console", testPage: "console/5135/issue5135.html"},
     {group: "console",            uri: "console/5655/issue5655.js",               desc: "console panel width empty elements", testPage: "console/5655/issue5655.html"},
@@ -273,26 +273,26 @@ var testList = [
     {group: "script/callstack",   uri: "script/callstack/5400/issue5400.js",      desc: "Firebug shows wrong (previous) stacktrace", testPage: "script/callstack/5400/issue5400.html"},
     {group: "script/callstack",   uri: "script/callstack/5544/issue5544.js",      desc: "Issue 5544: Can't set error breakpoint for shallow error", testPage: "script/callstack/5544/issue5544.html"},
     {group: "script/stepping",    uri: "script/stepping/StepIntoInIFrame/test-driver.js", desc: "Step into function within an iframe", testPage: "script/stepping/StepIntoInIFrame/test.html"},
-    {group: "script/stepping",    uri: "script/stepping/1179/issue1179.js",       desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179.html"},
-    {group: "script/stepping",    uri: "script/stepping/1179/issue1179-2.js",     desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179-2.html"},
+    //{group: "script/stepping",    uri: "script/stepping/1179/issue1179.js",       desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179.html"},
+    //{group: "script/stepping",    uri: "script/stepping/1179/issue1179-2.js",     desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179-2.html"},
     //{group: "script/stepping",    uri: "script/stepping/4509/issue4509.js",       desc: "\"Run to line\" debugging shortcut is activated neither by Ctrl-click nor by middle-click on line number", testPage: "script/stepping/4509/issue4509.html"},
-    {group: "script/stepping",    uri: "script/stepping/4839/issue4839.js",       desc: "Script execution stopped at wrong line", testPage: "script/stepping/4839/issue4839.html"},
+    //{group: "script/stepping",    uri: "script/stepping/4839/issue4839.js",       desc: "Script execution stopped at wrong line", testPage: "script/stepping/4839/issue4839.html"},
     {group: "script/stepping",    uri: "script/stepping/4880/issue4880.js",       desc: "Step into function with frames, does not work", testPage: "script/stepping/4880/issue4880.html"},
     {group: "script/watch",       uri: "script/watch/5009/issue5009.js",          desc: "Watch side panel shows \"Command line closed?\"", testPage: "script/watch/5009/issue5009.html"},
     {group: "script/watch",       uri: "script/watch/5019/issue5019.js",          desc: "Editing a variable in the Watch window doesn't work", testPage: "script/watch/5019/issue5019.html"},
     {group: "script/watch",       uri: "script/watch/5336/issue5336.js",          desc: "HTMLCollection object is undefined in the Script panel", testPage: "script/watch/5336/issue5336.html"},
     {group: "script/watch",       uri: "script/watch/5639/issue5639.js",          desc: "Allow deleting all watch expressions at once", testPage: "script/watch/5639/issue5639.html"},
     {group: "dom",                uri: "dom/attributes/attributes.js",            desc: "Better DOM representation for element attributes", testPage: "dom/attributes/attributes.html" },
-    {group: "dom",                uri: "dom/breakpoints/breakOnProperty.js",      desc: "Break on property change", testPage: "dom/breakpoints/breakOnProperty.html" },
-    {group: "dom",                uri: "dom/breakpoints/breakOnGlobalProperty.js",desc: "Break on global property change", testPage: "dom/breakpoints/breakOnGlobalProperty.html" },
-    {group: "dom",                uri: "dom/breakpoints/breakOnPropertyCB.js",    desc: "Break on property change (Chromebug active)", testPage: "dom/breakpoints/breakOnProperty.html" },
-    {group: "dom",                uri: "dom/storage/storage.js",                  desc: "DOM Storage", testPage: "dom/storage/storage.html" },
-    {group: "dom",                uri: "dom/1738/1738.js",                        desc: "Editing DOM values", testPage: "dom/1738/main.html" },
+    //{group: "dom",                uri: "dom/breakpoints/breakOnProperty.js",      desc: "Break on property change", testPage: "dom/breakpoints/breakOnProperty.html" },
+    //{group: "dom",                uri: "dom/breakpoints/breakOnGlobalProperty.js",desc: "Break on global property change", testPage: "dom/breakpoints/breakOnGlobalProperty.html" },
+    //{group: "dom",                uri: "dom/breakpoints/breakOnPropertyCB.js",    desc: "Break on property change (Chromebug active)", testPage: "dom/breakpoints/breakOnProperty.html" },
+    //{group: "dom",                uri: "dom/storage/storage.js",                  desc: "DOM Storage", testPage: "dom/storage/storage.html" },
+    //{group: "dom",                uri: "dom/1738/1738.js",                        desc: "Editing DOM values", testPage: "dom/1738/main.html" },
     {group: "dom",                uri: "dom/2558/issue2558.js",                   desc: "Issue 2558: Function arguments not expandable in watch panel even though the object is array-like", testPage: "dom/2558/issue2558.html" },
-    {group: "dom",                uri: "dom/2772/issue2772.js",                   desc: "Issue 2772: DOM panel on reload no longer selects previous selected node.", testPage: "dom/2772/issue2772.html" },
+    //{group: "dom",                uri: "dom/2772/issue2772.js",                   desc: "Issue 2772: DOM panel on reload no longer selects previous selected node.", testPage: "dom/2772/issue2772.html" },
     {group: "dom",                uri: "dom/3122/issue3122.js",                   desc: "Issue 3122: Catch variables are not listed in the watch panel on break ('err' expr in the watch panel).", testPage: "dom/3122/issue3122.html" },
-    {group: "dom",                uri: "dom/3597/issue3597.js",                   desc: "Issue 3597: Objects turned into string have their DOM panel representation messed up", testPage: "dom/3597/issue3597.html" },
-    {group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
+    //{group: "dom",                uri: "dom/3597/issue3597.js",                   desc: "Issue 3597: Objects turned into string have their DOM panel representation messed up", testPage: "dom/3597/issue3597.html" },
+    //{group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
     {group: "dom",                uri: "dom/5247/issue5247.js",                   desc: "Add reps for different types of CSSRules", testPage: "dom/5247/issue5247.html" },
     {group: "dom",                uri: "dom/6283/issue6283.js",                   desc: "Console and DOM panel fail on interpreting @page", testPage: "dom/6283/issue6283.html" },
     {group: "net",                uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
